<resources>
    <string name="app_name">PassMeProfessor</string>
    <string name="rubric_desc">Image displays rubric sprite</string>
    <string name="rubric_pass">Pass</string>
    <string name="rubric_fail">Fail</string>
    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="letter_c">C</string>
    <string name="letter_d">D</string>
    <string name="letter_e">E</string>

</resources>